syntax = "proto3";
package KafkaServices.ProtoModels;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "KafkaServices.ProtoModels";

message BoolModelProto {
     bool Bool = 1;
}

message TestModelProto {
    int32 Int                          = 1;
    int64 Long                         = 2;
    float Float                        = 3;
    double Double                      = 4;
    DecimalValue Decimal               = 5;
    string String                      = 6;
    google.protobuf.Timestamp DateTime = 7;
    BoolModelProto BoolModel           = 8;
    repeated string Strings            = 9;
}

message DecimalValue {

    // Whole units part of the amount
    int64 units    = 1;

    // Nano units of the amount (10^-9)
    // Must be same sign as units
    sfixed32 nanos = 2;
}